--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -43,7 +43,13 @@ jobs:
     - name: Run demo.py
       run: |
         echo "Running MCP Server demo on Linux..."
+        set -e  # Exit on any error
         uv run python scripts/demo.py ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        if [ $? -ne 0 ]; then
+          echo "❌ Demo script failed with exit code $?"
+          exit 1
+        fi
+        echo "✅ Demo script completed successfully"
       env:
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
