--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -43,7 +43,13 @@ jobs:
     - name: Run demo.py
       run: |
         Write-Host "Running MCP Server demo on Windows..."
+        $ErrorActionPreference = "Stop"  # Exit on any error
         uv run python scripts/demo.py ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        if ($LASTEXITCODE -ne 0) {
+          Write-Host "❌ Demo script failed with exit code $LASTEXITCODE" -ForegroundColor Red
+          exit $LASTEXITCODE
+        }
+        Write-Host "✅ Demo script completed successfully" -ForegroundColor Green
       env:
         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
