--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/azure-storage-mcp
 
 jobs:
   build-and-test:
@@ -22,6 +22,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Set image name to lowercase
+      run: |
+        echo "IMAGE_NAME_LOWER=$(echo '${{ env.IMAGE_NAME }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      
     - name: Set up Podman
       run: |
         sudo apt-get update
@@ -30,13 +34,14 @@ jobs:
     - name: Build OCI image with Podman
       run: |
         echo "Building OCI image with Podman..."
-        podman build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test .
+        echo "Image name: ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test"
+        podman build -t ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test .
         
     - name: Test image can start
       run: |
         echo "Testing if container can start properly..."
         # Test that the container can start and import the module
-        podman run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test python -c "import azure_storage_mcp.server; print('✅ Server module loaded successfully')"
+        podman run --rm ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test python -c "import azure_storage_mcp.server; print('✅ Server module loaded successfully')"
         
     - name: Azure CLI Login for container testing
       uses: azure/login@v1
@@ -60,7 +65,7 @@ jobs:
           -e AZURE_CLIENT_ID="${{ secrets.AZURE_CLIENT_ID }}" \
           -e AZURE_CLIENT_SECRET="${{ secrets.AZURE_CLIENT_SECRET }}" \
           -e AZURE_SUBSCRIPTION_ID="${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test \
+          ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test \
           uv run python scripts/demo.py ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         
         if [ $? -ne 0 ]; then
@@ -83,15 +88,15 @@ jobs:
         echo "Tagging and pushing image..."
         
         # Tag with commit SHA and latest
-        podman tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        podman tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        podman tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}
+        podman tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
         
         # Push both tags
-        podman push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        podman push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        podman push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}
+        podman push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
         
         echo "✅ Image published successfully"
-        echo "Image available at: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+        echo "Image available at: ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest"
         
     - name: Upload test results on failure
       if: failure()
